# rustlab2024-wgpu

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
public/: index.html
src/: application.rs  application.wgsl  arcball.rs  main.rs  scene.rs  scene.wgsl  texture.rs
