[package]
name = "rustlab2024-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
bytemuck = { version = "1.19.0", features = ["derive"] }
cgmath = "0.18.0"
futures = "0.3.31"
log = "0.4.22"
wgpu = { version = "23.0.0", features = ["fragile-send-sync-non-atomic-wasm"] }
winit = "0.30.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
console_log = "1.0"
console_error_panic_hook = "0.1.7"
